
syntax = "proto3";

package prime;

option java_package = "com.proto.prime";
option java_multiple_files = true;

message Prime {
    int32 a = 1;
}

message PrimeRequest {
    Prime prime = 1;
}

message PrimeResponse {
    int32 resp = 1;
}

service PrimeService {
    rpc prime (PrimeRequest) returns (stream PrimeResponse);
}

